@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
title Class Diagram - Login with Google

class "GoogleLoginServlet" as GoogleLoginServlet_0 {
  +doPost()
  +redirectByRole()
}

class "GoogleAuthUtil" as GoogleAuthUtil_1 {
  +getGoogleClientId()
  +verifyIdToken()
}

class "UserService" as UserService_2 {
  +loginWithGoogleEmail()
}

class "UserDao" as UserDao_3 {
  +getUserByEmail()
}

class "TemporaryRoleAccessService" as TemporaryRoleAccessService_4 {
  +synchronizeSessionRole()
}

GoogleLoginServlet_0 --> GoogleAuthUtil_1 : verify Google token
GoogleLoginServlet_0 --> UserService_2 : loginWithGoogleEmail
UserService_2 --> UserDao_3 : query active account by email
GoogleLoginServlet_0 --> TemporaryRoleAccessService_4 : sync role session
@enduml
